--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,7 +5,6 @@
 
 .contentContainer {
     width: 65%;
-    min-width: 957px;
 }
 
 .topBarContainer {
@@ -18,7 +17,6 @@
 
 .mainInfoContainer {
     background: black;
-    min-height: 500px;
     padding-top: 184px;
     display: flex;
     justify-content: center;
@@ -56,14 +54,14 @@
     height: 14px;
 }
 
-.ossContainer {
+.ossContainer, .journalContainer, .mapContainer {
     background: #FAFAFA;
-    min-height: 500px;
     display: flex;
     justify-content: center;
+    padding-bottom: 80px;
 }
 
-.ossContainer .slogan {
+.ossContainer .slogan, journalContainer .slogan {
     color: #000000;
     margin-top: 100px;
     margin-bottom: 65px;
@@ -81,7 +79,6 @@
 
 .videoContainer {
     background: #000000;
-    min-height: 500px;
     display: flex;
     justify-content: center;
 }
@@ -102,46 +99,6 @@
 
 .videoItem:nth-of-type(even) {
     margin-right: 2%;
-}
-
-.highlightContainer {
-    background: #000;
-    height: 320px;
-    display: flex;
-    justify-content: center;
-}
-
-.highlightContainer .contentContainer {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
-}
-
-.highlightItem {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-}
-
-.highlightNumber {
-    font-size: 145px;
-    color: #fff;
-    font-weight: 900;
-}
-
-.highlightTitle {
-    font-size: 14px;
-    color: #B3B3B3;
-}
-
-.mapContainer {
-    background: #fff;
-    min-height: 500px;
-    display: flex;
-    justify-content: center;
 }
 
 .mapContainer .slogan {
