--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,21 @@
+
+@media screen and (max-width: 1366px) {
+    html {
+        --min-font-size: 12px;
+        --max-font-size: 16px;
+        --min-viewport-width: 320px;
+        --max-viewport-width: 1366px;
+        font-size: calc(
+            var(--min-font-size) + 
+            (var(--max-font-size) - var(--min-font-size)) * 
+            (
+                (100vw - var(--min-viewport-width)) / 
+                (var(--max-viewport-width) - var(--min-viewport-width)))
+        ); /* ^ I don't know why this didn't work */
+        font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1366 - 300)));
+    }
+}
+
 .App {
     height: 100%;
     width: 100%;
@@ -9,7 +27,7 @@
 
 .topBarContainer {
     position: absolute;
-    height: 80px;
+    height: calc(80 / 16 * 1rem);
     width: 100%;
     display: flex;
     justify-content: center;
@@ -22,29 +40,28 @@
 .mainInfoContainer {
     position: relative;
     background: black;
-    padding-top: 184px;
+    padding-top: calc(184 / 16 * 1rem);
     display: flex;
     justify-content: center;
     overflow: hidden;
 }
 
 .slogan {
-    font-size: 30px;
+    font-size: calc(30 / 16 * 1rem);
     font-weight: 900;
-    width: 70%;
     color: #fff;
 }
 
 .mainInfoContainer .tags {
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: calc(60 / 16 * 1rem);
+    margin-bottom: calc(60 / 16 * 1rem);
 }
 .mainInfoContainer .tags div {
-    margin: 6px;
+    margin: calc(6 / 16 * 1rem);
 }
 
 .socialContainer {
-    width: 60px;
+    width: calc(60 / 16 * 1rem);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,39 +73,40 @@
 
 .socialContainer a {
     display: flex;
-    height: 14px;
+    height: calc(14 / 16 * 1rem);
 }
 
 .ossContainer, .journalContainer, .mapContainer {
     background: #FAFAFA;
     display: flex;
     justify-content: center;
-    padding-bottom: 80px;
+    padding-bottom: calc(80 / 16 * 1rem);
 }
 
 .cardContainer {
-    padding-bottom: 80px;
+    padding-bottom: calc(80 / 16 * 1rem);
 }
 
 .ossContainer .slogan, .journalContainer .slogan {
     color: #000000;
-    margin-top: 100px;
-    margin-bottom: 65px;
-    width: 40%;
+    margin-top: calc(100 / 16 * 1rem);
+    margin-bottom: calc(65 / 16 * 1rem);
 }
 
+/* THIS CODE IS DEAD
 .ossItem {
     border: 1px #E1E5F4 solid;
-    height: 100px;
-    margin-bottom: 12px;
+    height: calc(100 / 16 * 1rem);
+    margin-bottom: calc(12 / 16 * 1rem);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+*/
 
 .highlightContainer {
     background: #000;
-    height: 320px;
+    height: calc(320 / 16 * 1rem);
     display: flex;
     justify-content: center;
 }
@@ -98,6 +116,7 @@
     justify-content: space-around;
     align-items: center;
     height: 100%;
+    min-width: 600px;
 }
 
 .highlightItem {
@@ -109,27 +128,27 @@
 }
 
 .highlightNumber {
-    font-size: 145px;
+    font-size: calc(145 / 16 * 1rem);
     color: #fff;
     font-weight: 900;
 }
 
 .highlightTitle {
-    font-size: 14px;
+    font-size: calc(14 / 16 * 1rem);
     color: #B3B3B3;
 }
 
 .mapContainer {
     background: #fff;
-    min-height: 500px;
+    min-height: calc(500 / 16 * 1rem);
     display: flex;
     justify-content: center;
 }
 
 .mapContainer .slogan {
     color: #000;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    margin-top: calc(60 / 16 * 1rem);
+    margin-bottom: calc(60 / 16 * 1rem);
 }
 
 .buttons {
@@ -140,12 +159,12 @@
 
 .buttons .Button {
     flex: 1 0 18%;
-    margin: 5px;
+    margin: calc(5 / 16 * 1rem);
     text-align: center;
 }
 
 .footerContainer {
-    height: 80px;
+    height: calc(80 / 16 * 1rem);
     background: #000;
     display: flex;
     justify-content: center;
