--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,4 +1,3 @@
-
 @media screen and (max-width: 1366px) {
     html {
         --min-font-size: 12px;
@@ -6,10 +5,9 @@
         --min-viewport-width: 320px;
         --max-viewport-width: 1366px;
         font-size: calc(
-            var(--min-font-size) +
-            (var(--max-font-size) - var(--min-font-size)) *
-            (
-                (100vw - var(--min-viewport-width)) /
+                var(--min-font-size) +
+                (var(--max-font-size) - var(--min-font-size)) *
+                ((100vw - var(--min-viewport-width)) /
                 (var(--max-viewport-width) - var(--min-viewport-width)))
         ); /* ^ I don't know why this didn't work */
         font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1366 - 300)));
@@ -31,6 +29,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    z-index: 3;
 }
 
 .topBarContainer .contentContainer, .mainInfoContainer .contentContainer {
@@ -40,7 +39,7 @@
 .mainInfoContainer {
     position: relative;
     background: black;
-    padding-top: calc(184 / 16 * 1rem);
+    padding-top: calc(160 / 16 * 1rem);
     display: flex;
     justify-content: center;
     overflow: hidden;
@@ -53,10 +52,11 @@
 }
 
 .mainInfoContainer .tags {
-    margin-top: calc(60 / 16 * 1rem);
-    margin-bottom: calc(60 / 16 * 1rem);
+    margin-top: calc(30 / 16 * 1rem);
+    margin-bottom: calc(50 / 16 * 1rem);
     flex-wrap: wrap;
 }
+
 .mainInfoContainer .tags div {
     margin: calc(6 / 16 * 1rem);
 }
@@ -90,8 +90,8 @@
 
 .ossContainer .slogan, .journalContainer .slogan {
     color: #000000;
-    margin-top: calc(100 / 16 * 1rem);
-    margin-bottom: calc(65 / 16 * 1rem);
+    margin-top: calc(50 / 16 * 1rem);
+    margin-bottom: calc(50 / 16 * 1rem);
 }
 
 .mapContainer {
@@ -163,8 +163,8 @@
 }
 
 .cultureContainer .slogan {
-    margin-top: calc(100 / 16 * 1rem);
-    margin-bottom: calc(65 / 16 * 1rem);
+    margin-top: calc(50 / 16 * 1rem);
+    margin-bottom: calc(50 / 16 * 1rem);
 }
 
 .cultureVideoContainer {
@@ -179,4 +179,111 @@
     top: 0;
     bottom: 0;
     right: 0;
+}
+
+.slogan.jobs {
+    margin-top: calc(40 / 16 * 1rem);
+    margin-bottom: calc(40 / 16 * 1rem);
+}
+
+.slogan.city {
+    font-size: calc(20 / 16 * 1rem);
+    margin-top: calc(30 / 16 * 1rem);
+    margin-bottom: calc(30 / 16 * 1rem);
+}
+
+@media screen and (max-width: 600px) {
+    .contentContainer {
+        width: 90%;
+    }
+
+    .mapBody {
+        width: 110%;
+        margin-left: -5%;
+    }
+
+    .highlightItem .highlightNumber {
+        font-size: 60px;
+    }
+
+    .slogan {
+        text-align: center;
+    }
+}
+
+th.srJobListJobTitle {
+    display: none;
+}
+
+.srJobList tr:hover * {
+    background-color: #A0ABB8 !important;
+    color: #ffffff !important;
+}
+
+.longDescription {
+    font-size: calc(20 / 16 * 1rem);
+    color: #ffffff;
+    margin-top: calc(30 / 16 * 1rem);
+}
+
+.longDescription a {
+    color: #ffffff;
+    text-decoration: underline;
+}
+
+.hiringBanner {
+    height: 40px;
+    line-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.hiringBanner span {
+    padding-left: 5px;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.textDescription {
+    color: #ffffff;
+    font-size: calc(20 / 16 * 1rem);
+    margin-top: calc(50 / 16 * 1rem);
+    margin-bottom: calc(50 / 16 * 1rem);
+}
+.textDescription a {
+    color: #ffffff;
+    text-decoration: underline;
+}
+
+.imageGallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.imageGallery .image-gallery {
+    width: 100%;
+}
+
+.officesContainer {
+    display: flex;
+    justify-content: center;
+    background: #fff;
+    padding-bottom: calc(65 / 16 * 1rem);
+}
+
+.officesContainer .slogan {
+    color: #000000;
+    margin-top: calc(50 / 16 * 1rem);
+    margin-bottom: calc(50 / 16 * 1rem);
+}
+
+.aboutEvoContainer {
+    display: flex;
+    justify-content: center;
+    background: #000000;
+    padding-top: calc(50 / 16 * 1rem);
+    padding-bottom: calc(50 / 16 * 1rem);
 }
