--- a/src/components/TopBar/TopBar.css
+++ b/src/components/TopBar/TopBar.css
@@ -27,7 +27,6 @@
 }
 
 .navigationContainer {
-    width: 60%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -68,4 +67,74 @@
 .navigationContainer a:hover:before {
     visibility: visible;
     transform: scaleX(1);
+}
+
+.menuIcon, .backdrop {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .menuIcon, .backdrop {
+        display: block;
+    }
+
+    .menuIcon {
+        width: 30px;
+        margin-top: 2px;
+        margin-right: 5px;
+    }
+
+    .navigationWrapper {
+        flex: 1;
+        display: flex;
+        justify-content: flex-end;
+    }
+
+    .navigationContainer {
+        position: absolute;
+        background: #000000;
+        left: 0;
+        right: 0;
+        top: -40px;
+        width: 100%;
+        flex-direction: column;
+        z-index: 2;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+        transform: translateY(-100%);
+        transition: transform 350ms ease-in-out;
+    }
+
+    .navigationWrapper.open .navigationContainer {
+        transform: translateY(0);
+    }
+
+    .navigationContainer a {
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding-left: 20px;
+        margin-right: 0;
+        margin-left: 0;
+        font-weight: bold;
+        width: 100%;
+    }
+
+    .navigationWrapper .backdrop {
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0, 0, 0, 0.27);
+        position: fixed;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 350ms ease-in-out;
+    }
+
+    .navigationWrapper.open .backdrop {
+        visibility: visible;
+        opacity: 1;
+    }
 }
