--- a/src/components/App.css
+++ b/src/components/App.css
@@ -45,7 +45,7 @@
     overflow: hidden;
 }
 
-.bootcampContainer {
+.bannerGenericContainer {
     width: 90%;
     height: calc(360 / 16 * 1rem);
     min-height: 200px;
@@ -53,14 +53,14 @@
 }
 
 @media screen and (max-width: 820px) {
-    .bootcampContainer {
+    .bannerGenericContainer {
         width: 95%;
         height: calc(240 / 16 * 1rem);
     }
 }
 
 @media (orientation: landscape) and (max-width: 820px) {
-    .bootcampContainer {
+    .bannerGenericContainer {
         width: 90%
     }
 }
